<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content" android:background="#123456">

       <TextView
        android:id="@+id/labId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text=""
        android:visibility="invisible"
    />
 
    <TextView
        android:id="@+id/labLocation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:text="@string/hydrantlocation"
        android:textAppearance="?android:attr/textAppearanceMedium" />
    
    <TextView
        android:id="@+id/txtLocation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/labLocation"
        android:layout_marginLeft="70dp"
        android:layout_toRightOf="@+id/labLocation"
        android:text="Stairs"
        android:textAppearance="?android:attr/textAppearanceMedium" />
    
    <TextView
        android:id="@+id/labNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/txtLocation"
        android:text="@string/hydrantnumber"
        android:textAppearance="?android:attr/textAppearanceMedium" />
    
    <TextView
        android:id="@+id/txtNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/txtLocation"
        android:layout_alignTop="@+id/labNumber"
        android:text="1"
        android:textAppearance="?android:attr/textAppearanceMedium" />
    <TextView
        android:id="@+id/labDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/txtNumber"
        android:text="@string/date"
        android:textAppearance="?android:attr/textAppearanceMedium" />
    
    <TextView
        android:id="@+id/txtDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/txtNumber"
        android:layout_marginLeft="-90dp"
        android:layout_alignTop="@+id/labDate"
        android:text="27/06/12"
        android:textAppearance="?android:attr/textAppearanceMedium" />
    

</RelativeLayout>